--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.4",
+    "lodash": "^4.17.15",
     "meteor-node-stubs": "^0.4.1",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "react-flip-move": "^3.0.4",
+    "react-fontawesome": "^1.7.1",
+    "react-meteor-hooks": "^0.3.1",
+    "react-modal": "^3.11.1",
+    "react-moment": "^0.9.7",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^5.0.0",
+    "uuid": "^3.4.0"
   },
   "meteor": {
     "mainModule": {
